--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: jxzhuge12@gmail.com
 description: "Hey, it's me."
 keyword: "Math, Computer Science"
-# url: "http://huangxuan.me"              # your host, for absolute URL
+url: "http://jxzhuge12.github.io"              # your host, for absolute URL
 # baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
