--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ zhihu_username:     jxzhuge12
 github_username:    jxzhuge12
 twitter_username:   jxzhuge12
 facebook_username:  jxzhuge12
-
+instagram_username: jxzhuge12
+snapchat_username:  jxzhuge12
 
 
 # Build settings
