add instagram icon

--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ url: "http://jxzhuge12.github.io"              # your host, for absolute URL
 
 
 # SNS settings
-RSS: false
-weibo_username:     jxzhuge12
-zhihu_username:     jxzhuge12
+# RSS: false
+# weibo_username:     jxzhuge12
+# zhihu_username:     jxzhuge12
 github_username:    jxzhuge12
-twitter_username:   jxzhuge12
+# twitter_username:   jxzhuge12
 facebook_username:  jxzhuge12
 instagram_username: jxzhuge12
 snapchat_username:  jxzhuge12
