--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: jxzhuge12
-SEOTitle: Xavier | jxzhuge12 Blog
+title: jxzhuge12 blog
+SEOTitle: jxzhuge12
 header-img: img/home-bg.jpg
 email: jxzhuge12@gmail.com
 description: "Hey, it's me."
@@ -11,11 +11,7 @@ url: "http://jxzhuge12.github.io"              # your host, for absolute URL
 
 
 # SNS settings
-# RSS: false
-# weibo_username:     jxzhuge12
-# zhihu_username:     jxzhuge12
 github_username:    jxzhuge12
-# twitter_username:   jxzhuge12
 facebook_username:  jxzhuge12
 instagram_username: jxzhuge12
 snapchat_username:  jxzhuge12
@@ -69,7 +65,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: ""
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
