--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "http://jxzhuge12.github.io"              # your host, for absolute URL
 github_username:    jxzhuge12
 facebook_username:  jxzhuge12
 instagram_username: jxzhuge12
-snapchat_username:  jxzhuge12
+# snapchat_username:  jxzhuge12
 
 
 # Build settings
