--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: jxzhuge12 blog
+title: jxzhuge12
 SEOTitle: jxzhuge12
 header-img: img/home-bg.jpg
 email: jxzhuge12@gmail.com
