--- a/_config.yml
+++ b/_config.yml
@@ -45,10 +45,10 @@ kramdown:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+ba_track_id: e33082c7a6c8093290706e6df9700f11
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_track_id: 'UA-76118506-1'            # Format: UA-xxxxxx-xx
+ga_domain: jxzhuge12.me
 
 
 
