--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 # SNS settings
 github_username:    jxzhuge12
 facebook_username:  jxzhuge12
-# instagram_username: jxzhuge12
+instagram_username: jxzhuge12
 linkedin_username:  jxzhuge12
 snapchat_username:  jxzhuge12
 
